# QSM.rs

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  TODO.md
.github/workflows/: combinatorial-tests.yml  docs.yml  integration-tests.yml  release.yml  unit-tests.yml
examples/: pipeline_highlevel.rs  pipeline_lowlevel.rs  qsmart_nifti.rs  test_iharperella.rs
scripts/: download-test-data.sh  render_paper_figures.py  render_slices.py
src/: fft.rs  grid.rs  lib.rs  nifti_io.rs  par.rs  priority_queue.rs  region_grow.rs  swi.rs
src/bet/: evolution.rs  mesh.rs  mod.rs
src/bgremove/: iharperella.rs  ismv.rs  lbv.rs  mod.rs  pdf.rs  resharp.rs  sdf.rs  sharp.rs  smv.rs  vsharp.rs
src/inversion/: admm.rs  fansi.rs  hdqsm.rs  ilsqr.rs  l1qsm.rs  medi.rs  mod.rs  ndi.rs  nltv.rs  rts.rs  tgv.rs  tikhonov.rs  tkd.rs  tv.rs  whqsm.rs
src/kernels/: dipole.rs  laplacian.rs  smv.rs
src/pipeline/: bg_removal.rs  config.rs  field_mapping.rs  iharperella.rs  inversion.rs  masking.rs  mod.rs  phase_utils.rs  qsmart.rs  referencing.rs
src/separation/: chi_sep_medi.rs  mod.rs
src/solvers/: cg.rs  lsmr.rs  mod.rs
src/unwrap/: laplacian.rs  mod.rs  romeo.rs
src/utils/: bias_correction.rs  curvature.rs  frangi.rs  gradient.rs  mask.rs  mod.rs  multi_echo.rs  padding.rs  qsmart.rs  r2star.rs  simd_ops.rs  threshold.rs  vasculature.rs
tests/: chisep_integration.rs  crosscheck.rs  integration_tests.rs  qsmart_validation.rs
tests/common/: mod.rs
web/: index.html  qsm-tokens.css  rustdoc-header.html
