[package]
name = "qsm-core"
version = "0.0.0" # Set automatically by release workflow from git tag
edition = "2021"
description = "Core QSM (Quantitative Susceptibility Mapping) algorithms"

[lib]
crate-type = ["rlib"]

[features]
default = []
simd = ["wide"]

[dependencies]
# FFT and complex number support
rustfft = "6.2"
num-complex = "0.4"
num-traits = "0.2"

# NIfTI file support
nifti = { version = "0.17", default-features = false, features = ["ndarray_volumes"] }
ndarray = "0.16"
flate2 = "1.1"
bytemuck = "1.24"

# SIMD acceleration (optional)
wide = { version = "0.7", optional = true }

# 2D Delaunay triangulation for curvature calculation
delaunator = "1.0"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
