[package]
name = "qsm-core"
version = "0.0.0" # Set automatically by release workflow from git tag
edition = "2021"
description = "Core QSM (Quantitative Susceptibility Mapping) algorithms"
homepage = "https://astewartau.github.io/QSM.rs/"
repository = "https://github.com/astewartau/QSM.rs"
documentation = "https://astewartau.github.io/QSM.rs/api/qsm_core/"
license = "MIT"
keywords = ["qsm", "mri", "neuroimaging", "susceptibility", "medical-imaging"]
categories = ["science", "algorithms"]

[lib]
crate-type = ["rlib"]

[features]
default = []
parallel = ["rayon"]
simd = ["wide"]
# Derives Serialize on the *Params structs (off by default — they are not
# serde config types). Used only by downstream tests to introspect field names
# and verify the qsmxt-config wrapper layer covers every parameter.
introspection = ["dep:serde"]

[dependencies]
# FFT and complex number support
rustfft = "6.2"
num-complex = "0.4"
num-traits = "0.2"

# NIfTI file support
nifti = { version = "0.17", default-features = false, features = ["ndarray_volumes"] }
ndarray = "0.16"
flate2 = "1.1"
bytemuck = "1.24"

# Parallelism (optional)
rayon = { version = "1", optional = true }

# SIMD acceleration (optional)
wide = { version = "0.7", optional = true }

# 2D Delaunay triangulation for curvature calculation
delaunator = "1.0"

# Serde derive, only linked when the `introspection` feature is on (see [features]).
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
